--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.4.5",
+  "version": "1.4.6",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "name": {
@@ -33,12 +33,185 @@
     ]
   },
   "flow": {
+    "triggers": [
+      {
+        "id": "double_switch_turned_on",
+        "title": {
+          "en": "Turned on",
+          "nl": "Aangezet",
+          "de": "Eingeschaltet"
+        },
+        "titleFormatted": {
+          "en": "Output [[output]] is turned on",
+          "nl": "Uitgang [[output]] werd aan gezet",
+          "de": "Ausgang [[output]] wurde eingeschaltet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "output",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Output 1",
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Output 2",
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "double_switch_turned_off",
+        "title": {
+          "en": "Turned of",
+          "nl": "Uitgezet",
+          "de": "Eingeschaltet"
+        },
+        "titleFormatted": {
+          "en": "Output [[output]] turned off",
+          "nl": "Uitgang [[output]] is uit gezet",
+          "de": "Ausgang [[output]] wurde ausgeschaltet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "output",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Output 1",
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Output 2",
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "double_switch_toggled",
+        "title": {
+          "en": "Turned on or off",
+          "nl": "Aan of uit gezet",
+          "de": "Ein oder aus geschaltet"
+        },
+        "titleFormatted": {
+          "en": "Output [[output]] turned on or off",
+          "nl": "Uitgang [[output]] werd aan of uit gezet",
+          "de": "Ausgang [[output]] wurde ein oder aus geschaltet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "output",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Output 1",
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Output 2",
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
+                }
+              }
+            ]
+          }
+        ]
+      }
+    ],
+    "conditions": [
+      {
+        "id": "double_switch_is_turned_on",
+        "title": {
+          "en": "Is turned on",
+          "nl": "Staat aan",
+          "de": "Ist eingeschaltet"
+        },
+        "titleFormatted": {
+          "en": "Output [[output]] is turned on",
+          "nl": "Uitgang [[output]] staat aan",
+          "de": "Ausgang [[output]] ist eingeschaltet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "output",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Output 1",
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Output 2",
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
+                }
+              }
+            ]
+          }
+        ]
+      }
+    ],
     "actions": [
       {
         "id": "double_switch_turn_on",
         "title": {
           "en": "Turn on",
-          "nl": "Zet aan"
+          "nl": "Zet aan",
+          "de": "Einschalten"
         },
         "titleFormatted": {
           "en": "Turn on [[output]]",
@@ -59,14 +232,16 @@
                 "id": "1",
                 "label": {
                   "en": "Output 1",
-                  "nl": "Uitgang 1"
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
                 }
               },
               {
                 "id": "2",
                 "label": {
                   "en": "Output 2",
-                  "nl": "Uitgang 2"
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
                 }
               }
             ]
@@ -77,7 +252,8 @@
         "id": "double_switch_turn_off",
         "title": {
           "en": "Turn off",
-          "nl": "Zet uit"
+          "nl": "Zet uit",
+          "de": "Ausgeschaltet"
         },
         "titleFormatted": {
           "en": "Turn off [[output]]",
@@ -98,14 +274,16 @@
                 "id": "1",
                 "label": {
                   "en": "Output 1",
-                  "nl": "Uitgang 1"
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
                 }
               },
               {
                 "id": "2",
                 "label": {
                   "en": "Output 2",
-                  "nl": "Uitgang 2"
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
                 }
               }
             ]
@@ -116,7 +294,8 @@
         "id": "double_switch_toggle",
         "title": {
           "en": "Toggle on or off",
-          "nl": "Zet aan of uit"
+          "nl": "Zet aan of uit",
+          "de": "Ein oder aus schalten"
         },
         "titleFormatted": {
           "en": "Turn on or off  [[output]]",
@@ -137,14 +316,16 @@
                 "id": "1",
                 "label": {
                   "en": "Output 1",
-                  "nl": "Uitgang 1"
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
                 }
               },
               {
                 "id": "2",
                 "label": {
                   "en": "Output 2",
-                  "nl": "Uitgang 2"
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
                 }
               }
             ]
