--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.4.8",
+  "version": "1.5.0",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "name": {
@@ -33,6 +33,9 @@
       }
     ]
   },
+  "platforms": [
+    "local"
+  ],
   "flow": {
     "triggers": [
       {
@@ -158,6 +161,258 @@
                 }
               }
             ]
+          }
+        ]
+      },
+      {
+        "id": "double_switch_scenes",
+        "title": {
+          "en": "Central scenes",
+          "nl": "Scenes",
+          "de": "Szenen"
+        },
+        "titleFormatted": {
+          "en": "Button [[button]] is clicked [[clickcount]] times",
+          "nl": "Knop [[button]] is [[clickcount]] ingedrukt",
+          "de": "Taste [[button]] ist [[clickcount]] gedrückt"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "button",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Top left button",
+                  "nl": "Bovenste knop links",
+                  "de": "Obere Taste links"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Bottom left button",
+                  "nl": "Onderste knop links",
+                  "de": "Untere Taste links"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Top right button",
+                  "nl": "Bovenste knop rechts",
+                  "de": "Obere Taste rechts"
+                }
+              },
+              {
+                "id": "4",
+                "label": {
+                  "en": "Bottom right button",
+                  "nl": "Onderste knop rechts",
+                  "de": "Untere Taste rechts"
+                }
+              }
+            ]
+          },
+          {
+            "name": "clickcount",
+            "type": "number",
+            "title": {
+              "en": "Times pressed",
+              "nl": "Aantal keer ingedrukt",
+              "de": "Wie oft gedrückt"
+            },
+            "placeholder": "2-5",
+            "min": 2,
+            "max": 5,
+            "step": 1
+          }
+        ]
+      },
+      {
+        "id": "roller_shutter_scenes",
+        "title": {
+          "en": "Central scenes",
+          "nl": "Scenes",
+          "de": "Szenen"
+        },
+        "titleFormatted": {
+          "en": "Button [[button]] is clicked [[clickcount]] times",
+          "nl": "Knop [[button]] is [[clickcount]] ingedrukt",
+          "de": "Taste [[button]] ist [[clickcount]] gedrückt"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=roller-shutter"
+          },
+          {
+            "name": "button",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Top left button",
+                  "nl": "Bovenste knop links",
+                  "de": "Obere Taste links"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Bottom left button",
+                  "nl": "Onderste knop links",
+                  "de": "Untere Taste links"
+                }
+              },
+              {
+                "id": "3",
+                "label": {
+                  "en": "Top right button",
+                  "nl": "Bovenste knop rechts",
+                  "de": "Obere Taste rechts"
+                }
+              },
+              {
+                "id": "4",
+                "label": {
+                  "en": "Bottom right button",
+                  "nl": "Onderste knop rechts",
+                  "de": "Untere Taste rechts"
+                }
+              }
+            ]
+          },
+          {
+            "name": "clickcount",
+            "type": "number",
+            "title": {
+              "en": "Times pressed",
+              "nl": "Aantal keer ingedrukt",
+              "de": "Wie oft gedrückt"
+            },
+            "placeholder": "2-5",
+            "min": 2,
+            "max": 5,
+            "step": 1
+          }
+        ]
+      },
+      {
+        "id": "single_switch_scenes",
+        "title": {
+          "en": "Central scenes",
+          "nl": "Scenes",
+          "de": "Szenen"
+        },
+        "titleFormatted": {
+          "en": "Button [[button]] is clicked [[clickcount]] times",
+          "nl": "Knop [[button]] is [[clickcount]] ingedrukt",
+          "de": "Taste [[button]] ist [[clickcount]] gedrückt"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=single-wall-switch"
+          },
+          {
+            "name": "button",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Top button",
+                  "nl": "Bovenste knop",
+                  "de": "Obere Taste"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Bottom button",
+                  "nl": "Onderste knop",
+                  "de": "Untere Taste"
+                }
+              }
+            ]
+          },
+          {
+            "name": "clickcount",
+            "type": "number",
+            "title": {
+              "en": "Times pressed",
+              "nl": "Aantal keer ingedrukt",
+              "de": "Wie oft gedrückt"
+            },
+            "placeholder": "2-5",
+            "min": 2,
+            "max": 5,
+            "step": 1
+          }
+        ]
+      },
+      {
+        "id": "dimmer_scenes",
+        "title": {
+          "en": "Central scenes",
+          "nl": "Scenes",
+          "de": "Szenen"
+        },
+        "titleFormatted": {
+          "en": "Button [[button]] is clicked [[clickcount]] times",
+          "nl": "Knop [[button]] is [[clickcount]] ingedrukt",
+          "de": "Taste [[button]] ist [[clickcount]] gedrückt"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=wall-dimmer"
+          },
+          {
+            "name": "button",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Top button",
+                  "nl": "Bovenste knop",
+                  "de": "Obere Taste"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Bottom button",
+                  "nl": "Onderste knop",
+                  "de": "Untere Taste"
+                }
+              }
+            ]
+          },
+          {
+            "name": "clickcount",
+            "type": "number",
+            "title": {
+              "en": "Times pressed",
+              "nl": "Aantal keer ingedrukt",
+              "de": "Wie oft gedrückt"
+            },
+            "placeholder": "2-5",
+            "min": 2,
+            "max": 5,
+            "step": 1
           }
         ]
       }
@@ -429,7 +684,7 @@
             "hint": {
               "en": "The lifeline group reports the device's status.",
               "nl": "De lifeline groep rapporteert de status van het apparaat.",
-              "de": "Die lifelinfe gruppe meldet den Status des Geräts."
+              "de": "Die lifeline gruppe meldet den Status des Geräts."
             }
           }
         }
@@ -580,9 +835,9 @@
         },
         "unlearnmode": {
           "instruction": {
-            "en": "Hold the bottom button for at least 10 seconds, the LED should light up red.",
-            "nl": "Houd de onderste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
-            "de": "Halten Sie die untere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
+            "en": "Hold the top left button for at least 10 seconds, the LED should light up red.",
+            "nl": "Houd de knop linksboven ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
+            "de": "Halten Sie die linkere obere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
           }
         },
         "associationGroupsOptions": {
@@ -590,7 +845,7 @@
             "hint": {
               "en": "The lifeline group reports the device's status.",
               "nl": "De lifeline groep rapporteert de status van het apparaat.",
-              "de": "Die lifelinfe gruppe meldet den Status des Geräts."
+              "de": "Die lifeline gruppe meldet den Status des Geräts."
             }
           }
         }
@@ -725,9 +980,9 @@
         },
         "unlearnmode": {
           "instruction": {
-            "en": "Hold the bottom button for at least 10 seconds, the LED should light up red.",
-            "nl": "Houd de onderste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
-            "de": "Halten Sie die untere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
+            "en": "Hold the top button for at least 10 seconds, the LED should light up red.",
+            "nl": "Houd de bovenste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
+            "de": "Halten Sie die obere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
           }
         },
         "associationGroupsOptions": {
@@ -735,7 +990,7 @@
             "hint": {
               "en": "The lifeline group reports the device's status.",
               "nl": "De lifeline groep rapporteert de status van het apparaat.",
-              "de": "Die lifelinfe gruppe meldet den Status des Geräts."
+              "de": "Die lifeline gruppe meldet den Status des Geräts."
             }
           }
         }
@@ -971,9 +1226,9 @@
         },
         "unlearnmode": {
           "instruction": {
-            "en": "Hold the bottom button for at least 10 seconds, the LED should light up red.",
-            "nl": "Houd de onderste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
-            "de": "Halten Sie die untere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
+            "en": "Hold the top button for at least 10 seconds, the LED should light up red.",
+            "nl": "Houd de bovenste knop ingedrukt voor minstens 10 seconden. De LED brand nu rood.",
+            "de": "Halten Sie die obere Taste mindestens 10 Sekunden lang gedrückt. Die LED sollte rot leuchten."
           }
         },
         "associationGroupsOptions": {
@@ -981,7 +1236,7 @@
             "hint": {
               "en": "The lifeline group reports the device's status.",
               "nl": "De lifeline groep rapporteert de status van het apparaat.",
-              "de": "Die lifelinfe gruppe meldet den Status des Geräts."
+              "de": "Die lifeline gruppe meldet den Status des Geräts."
             }
           }
         }
