--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "_comment": "This file is generated. Please edit .homeycompose/app.json instead.",
   "id": "com.technisat.smarthome",
-  "version": "1.5.4",
+  "version": "1.5.5",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "name": {
@@ -429,6 +429,48 @@
           "en": "Output [[output]] is turned on",
           "nl": "Uitgang [[output]] staat aan",
           "de": "Ausgang [[output]] ist eingeschaltet"
+        },
+        "args": [
+          {
+            "type": "device",
+            "name": "device",
+            "filter": "driver_id=double-wall-switch"
+          },
+          {
+            "name": "output",
+            "type": "dropdown",
+            "values": [
+              {
+                "id": "1",
+                "label": {
+                  "en": "Output 1",
+                  "nl": "Uitgang 1",
+                  "de": "Ausgang 1"
+                }
+              },
+              {
+                "id": "2",
+                "label": {
+                  "en": "Output 2",
+                  "nl": "Uitgang 2",
+                  "de": "Ausgang 2"
+                }
+              }
+            ]
+          }
+        ]
+      },
+      {
+        "id": "double_switch_is_turned_ff",
+        "title": {
+          "en": "Is turned off",
+          "nl": "Staat uit",
+          "de": "Ist ausgeschaltet"
+        },
+        "titleFormatted": {
+          "en": "Output [[output]] is turned off",
+          "nl": "Uitgang [[output]] staat uit",
+          "de": "Ausgang [[output]] ist ausgeschaltet"
         },
         "args": [
           {
