--- a/drivers/roller-shutter/driver.settings.compose.json
+++ b/drivers/roller-shutter/driver.settings.compose.json
@@ -10,7 +10,7 @@
     "hint": {
       "en": "Enable/disable central scene notifications for 2x-5x button presses.",
       "nl": "Zet centrale scene notificaties aan voor 2-5 knop drukken.",
-      "de": "Aktiviert/Deaktiviert Zentrale Szenen Benachrichtigung für 2x-5x faches drücken."
+      "de": "Aktiviert/Deaktiviert Zentralszenen für 2- bis 5-faches Drücken."
     },
     "zwave": {
       "index": 1,
@@ -37,7 +37,7 @@
     "hint": {
       "en": "Interval of current power meter reports in 10 seconds increments.",
       "nl": "Interval van periodieke rapportage van het opgenomen vermogen . In stappen van 10 seconden.",
-      "de": "Intervall der aktuellen Stromverbrauch-Meldung. Wert in 10 sekunden."
+      "de": "Intervall der aktuellen Stromverbrauch-Meldung. Wert in 10 Sekunden."
     },
     "zwave": {
       "index": 2,
@@ -60,7 +60,7 @@
     "hint": {
       "en": "Interval of active energy meter reports in minutes. Value in minutes.",
       "nl": "Interval van periodieke rapportage van het energieverbruik. Waarde in minuten.",
-      "de": "Intervall der aktuellen Energieverbrauch-Meldung. Wert in minuten."
+      "de": "Intervall der aktuellen Energieverbrauchsmeldung. Wert in Minuten."
     },
     "zwave": {
       "index": 3,
@@ -74,7 +74,7 @@
     "label": {
       "en": "Calibration",
       "nl": "Kalibratie",
-      "de": "Kalibration"
+      "de": "Kalibrierung"
     },
     "hint": {
       "en": "Manual shutter calibration - shutter will move up, down and up again.",
