--- a/.homeycompose/app.json
+++ b/.homeycompose/app.json
@@ -1,9 +1,10 @@
 {
   "id": "com.technisat.smarthome",
-  "version": "1.5.8",
+  "version": "1.5.9",
   "compatibility": ">=5.0.0",
   "sdk": 3,
   "name": {
+    "de": "Technisat SmartHome App",
     "en": "Technisat SmartHome"
   },
   "brandColor": "#009EF3",
